2003-02-24  Larry Ewing  <lewing@ximian.com>

	* htmlgdkpainter.c (draw_pixmap): remove helper function.

	* gtkhtml.c: add a couple more properties.

	* htmlclueflow.c (relayout): add engine offsets to the draw call.

2003-02-24  Radek Doulik  <rodo@ximian.com>

	* gtkhtml-properties.c (gtk_html_class_properties_new): don't free
	fixed_name, it's stored in p

	* gtkhtml.c: don't use keybindings_theme, hardcode keybindings as
	gtk does (they could be changed in gtkrc file)

	* gtkhtml-properties.c: removed keybindings_theme

	* Makefile.am: removed keybindingsrc.* files parts

2003-02-23  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c: stub in some gobject property code.

	* gtkhtml-properties.c (gtk_html_class_properties_new): read the
	settings from from the style.

	* gtkhtml.c (gtk_html_class_init): add style properties for colors
	and fixed font.

2003-02-21  Larry Ewing  <lewing@ximian.com>

	* htmlimage.c: refactor animation drawing, remove broken
	HTMLImageAnimation structure, fix drawing while scrolling.
	
	* gtkhtml.c (gtk_html_begin_full): pass priv->content_type if the
	arg is NULL.

2003-02-20  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c: correct the drawing region for the offsets.

2003-02-20  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (set_fonts_idle): don't set font's in iframe, parent
	gtkhtml takes care of it

	* htmltext.c (html_utf8_strnchr): new helper function
	(html_text_text_line_length): use own html_utf8_strnchr, this
	increases speed really dramatically ;-)

	* gtkhtml.c (style_set): don't set fonts in idle time, but right
	now, this avoids recalculating whole document (after content is
	loaded)

	* htmltext.c (html_text_text_line_length): modify line_offset
	parameter
	(translated_len): new helper function
	(calc_word_width): correct offsets fot tabs

	* htmlpainter.c (html_painter_translate_text): dereference
	line_offset

	* htmltext.c (get_glyphs): translate special characters

2003-02-19  Radek Doulik  <rodo@ximian.com>
