@@ -44,90 +44,6 @@ static HTMLObjectClass *parent_class = NULL;
 static GList * get_items (HTMLTextSlave *slave, HTMLPainter *painter);
 static PangoGlyphString * get_glyphs (HTMLTextSlave *slave, HTMLPainter *painter, gint line_offset);
 
-#ifndef GAL_UTF8_NOT_SLOW
-/*
- * NOTE:
- * currently the gal utf8 functions check the entire string you pass to them for
- * invalid utf8, the expense of those calls is massive inside gtkhtml when a paragraph
- * is long.  Until gal turns off the checks we will use versions without checks.
- * And yes, it really is worth it.
- *   
- * --Larry
- */
-gint h_utf8_pointer_to_offset (const gchar *str, const gchar *pos);
-gint h_utf8_strlen (const gchar *p, gint max);
-gchar *h_utf8_offset_to_pointer  (const gchar *str, gint         offset);
-
-gint
-h_utf8_pointer_to_offset (const gchar *str,
-			  const gchar *pos)
-{
-  const gchar *s = str;
-  gint offset = 0;
-
-  while (s < pos)
-    {
-      s = g_utf8_next_char (s);
-      offset++;
-    }
-
-  return offset;
-}
-
-gint
-h_utf8_strlen (const gchar *p, gint max)
-{
-  int len = 0;
-  const gchar *start = p;
-
-  if (max < 0)
-    {
-      while (*p)
-        {
-          p = g_utf8_next_char (p);
-          ++len;
-        }
-    }
-  else
-    {
-      if (max == 0 || !*p)
-        return 0;
-      
-      p = g_utf8_next_char (p);          
-
-      while (p - start < max && *p)
-        {
-          ++len;
-          p = g_utf8_next_char (p);          
-        }
-
-      /* only do the last len increment if we got a complete
-       * char (don't count partial chars)
-       */
-      if (p - start == max)
-        ++len;
-    }
-
-  return len;
-}
-
-gchar *
-h_utf8_offset_to_pointer  (const gchar *str,
-			   gint         offset)
-{
-  const gchar *s = str;
-
-  while (offset--)
-    s = g_utf8_next_char (s);
-  
-  return (gchar *)s;
-}
-
-#define g_utf8_strlen h_utf8_strlen
-#define g_utf8_offset_to_pointer h_utf8_offset_to_pointer
-#define g_utf8_pointer_to_offset h_utf8_pointer_to_offset
-#endif
-
 char *
 html_text_slave_get_text (HTMLTextSlave *slave)
 {
